--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <script src="http://d3js.org/d3.v3.min.js"></script>
-    <script src="script.js"></script>    
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script src="script.js"></script>
 
 
   </head>
   <body>
+
 
     <nav class="navbar navbar-light bg-dark">
       <span class="h1" class="navbar-brand mb-0" style="color:#0595C1">UTAPI</span>
@@ -62,7 +64,12 @@
           </div>
           </div>
 
-            <div id="chart"></div>
+			<div style="width: 300px; padding-left: 50px; padding-top: 50px;">
+	   		 <canvas id="incBytesChart" width="300" height="300"></canvas>
+	   	</div>
+	   	 <div style="width: 330px; padding-left: 50px; padding-top: 50px;">
+	   		 <canvas id="storageUtilChart" width="330" height="300"></canvas>
+	   	</div>
 
           <script src=script.js></script>
 
