--- a/index.html
+++ b/index.html
@@ -1,87 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
+
+  <!-- _______________________ Head _______________________ -->
+
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- Title -->
+    <title>Zenkoders UTAPI</title>
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    <script src="script.js"></script>
 
+    <!-- Google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet">
 
-  </head>
-  <body>
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+    <!-- Style CSS -->
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 
-    <nav class="navbar navbar-light bg-dark">
-      <span class="h1" class="navbar-brand mb-0" style="color:#0595C1">UTAPI</span>
-    </nav>
-    <h1></h1>
+    <!-- Full Page CSS -->
+    <link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css" />
 
-      <div class="col-md-6 mb-3">
-          <div class="form-group">
+    <!-- JQuery -->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
+    <!-- Full Page JS -->
+    <script type="text/javascript" src="js/jquery.fullPage.min.js"></script>
 
-          <!-- <form class="form-group" name="startForm" onsubmit="return startFunction()"> -->
-          <form action=""  method="post" enctype="multipart/form-data" class="form-group" name="startForm">
-
-            <label></label>
-              <select class="form-control" name="bucket">
-                <option selected>Select Bucket...</option>
-                <option>Bucket 1</option>
-                <option>Bucket 2</option>
-                <option>Bucket 3</option>
-              </select>
-            <label></label>
-
-            <label for="start" class="d-block my-3">Start Time</label>
-            <input type="date" class="form-control d-block my-3" id="opt-date-start" name="dateStart">
-            <input type="time" class="form-control" id="opt-start" name="timeStart" placeholder="Start Time">
-
-            <label class="d-block my-3">End Time</label>
-            <input type="date" class="form-control d-block my-3" id="opt-date-end" name="dateEnd">
-            <input type="time" class="form-control" id="opt-end" name="timeEnd" placeholder="End Time">
-
-             <label></label>
-
-            <select class="form-control d-block my-3" name="timeStamp">
-              <option selected>Time Stamp...</option>
-              <option>15 min</option>
-              <option>30 min</option>
-              <option>01 hr</option>
-              <option>06 hrs</option>
-              <option>12 hrs</option>
-              <option>01 day</option>
-              <option>15 days</option>
-              <option>01 month</option>
-            </select>
-
-            <button type="submit" class="btn btn-info d-block my-3" style="background-color:#0595C1">Submit</button>
-          </form>
-          </div>
-          </div>
-
-			<div style="width: 300px; padding-left: 50px; padding-top: 50px;">
-	   		 <canvas id="incBytesChart" width="300" height="300"></canvas>
-	   	</div>
-	   	 <div style="width: 330px; padding-left: 50px; padding-top: 50px;">
-	   		 <canvas id="storageUtilChart" width="330" height="300"></canvas>
-	   	</div>
-
-          <script src=script.js></script>
-
-
-
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<!--     <script type="text/javascript" src="script.js"></script> -->
-
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="http://d3js.org/d3.v3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+
+    <!-- Full Page JS function -->
+    <script>
+      $(document).ready(function() {
+          $('#fullpage').fullpage({
+              lockAnchors: false,
+              menu: '#menu',
+              css3: true,
+              lazyLoading: true,
+              scrollingSpeed: 1000
+          });
+      });
+    </script>
+  </head>
+
+  <!-- ______________________ Body _______________________ -->
+
+  <body>
+  <!-- Main Container -->
+  <div id="fullpage">
+
+    <!-- ___________________ First Page ___________________ -->
+
+    <div class="section page-1-settings" data-anchor="firstPage">
+      <div class="container">
+        <img class="img-fluid zenko-img" src="img/zenko-logo.png">
+        <h1 class="text-center">hackathon</h1>
+      </div>
+      <div class="container button-settings">
+        <a class="btn btn-primary btn-lg" role="button" style="background-color:#0595C1" href="#secondPage">UTAPI</a>
+      </div>
+    </div>
+
+    <!-- ___________________ Second Page ___________________ -->
+
+    <div class="section page-2-settings" data-anchor="secondPage">
+      <div class="container">
+         <div class="container col-md-6 mb-3">
+            <div class="form-group">
+                <form action=""  method="post" enctype="multipart/form-data" class="form-group" name="startForm">
+                  <label></label>
+                    <select class="form-control" name="bucket">
+                      <option selected>Select Bucket...</option>
+                      <option>Bucket 1</option>
+                      <option>Bucket 2</option>
+                      <option>Bucket 3</option>
+                    </select>
+                  <label></label>
+
+                  <label for="start" class="d-block my-3">Start Time</label>
+                  <input type="date" class="form-control d-block my-3" id="opt-date-start" name="dateStart">
+                  <input type="time" class="form-control" id="opt-start" name="timeStart" placeholder="Start Time">
+
+                  <label class="d-block my-3">End Time</label>
+                  <input type="date" class="form-control d-block my-3" id="opt-date-end" name="dateEnd">
+                  <input type="time" class="form-control" id="opt-end" name="timeEnd" placeholder="End Time">
+
+                   <label></label>
+
+                  <select class="form-control d-block my-3" name="timeStamp">
+                    <option selected>Time Stamp...</option>
+                    <option>15 min</option>
+                    <option>30 min</option>
+                    <option>01 hr</option>
+                    <option>06 hrs</option>
+                    <option>12 hrs</option>
+                    <option>01 day</option>
+                    <option>15 days</option>
+                    <option>01 month</option>
+                  </select>
+                  <div class="col-md-12 text-center">
+                    <button id="submit-button" type="submit" class="btn btn-info" style="background-color:#0595C1">Submit</button>
+                  </div>
+                </form>
+              </form>
+            </div>
+          </div>
+        </div>
+       </div>
+
+<!--  <script> d3.select("body").enter().append("input").attr("type","submit").attr("class","btn btn-info d-block my-3").attr("action", "input.html"); </script> -->
+
+    <!-- ___________________ 3rd Page ___________________ -->
+
+    <div class="section page-3-settings" data-anchor="3rdPage">
+      <div class="container credits">
+        <span>
+          <i class="fa fa-code" aria-hidden="true"></i> with
+          <i class="fa fa-heart" aria-hidden="true"></i> by Zenkoders
+        </span>
+      </div>
+      <div class="container github-icon">
+        <a href="https://github.com/JibranKalia/zenkoders" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+      </div>
+    </div>
+
+  </div> <!-- End of pages -->
   </body>
 </html>
