Minor changes to the form

--- a/index.html
+++ b/index.html
@@ -75,11 +75,8 @@
             <div class="form-group">
                 <form action=""  method="post" enctype="multipart/form-data" class="form-group" name="startForm">
                   <label></label>
-                    <select class="form-control" name="bucket">
-                      <option selected>Select Bucket...</option>
-                      <option>Bucket 1</option>
-                      <option>Bucket 2</option>
-                      <option>Bucket 3</option>
+                    <input class="form-control" name="bucket" placeholder="Type Bucket name...">
+
                     </select>
                   <label></label>
 
