--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 
     <!-- Google fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Convergence" rel="stylesheet">
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -63,7 +63,7 @@
         <h1 class="text-center">hackathon</h1>
       </div>
       <div class="container button-settings">
-        <a class="btn btn-primary btn-lg" role="button" style="background-color:#0595C1" href="#secondPage">UTAPI</a>
+        <a class="btn btn-primary btn-lg" role="button" href="#secondPage">UTAPI</a>
       </div>
     </div>
 
@@ -102,7 +102,7 @@
                     <option>01 month</option>
                   </select>
                   <div class="col-md-12 text-center">
-                    <button id="submit-button" type="submit" class="btn btn-info" style="background-color:#0595C1">Submit</button>
+                    <button id="submit-button" type="submit" class="btn btn-info btn-primary btn-lg">Submit</button>
                   </div>
                 </form>
               </form>
