--- a/index.html
+++ b/index.html
@@ -74,27 +74,23 @@
          <div class="container col-md-6 mb-3">
             <div class="form-group">
                 <form action=""  method="post" enctype="multipart/form-data" class="form-group" name="startForm">
-                    <input class="form-control" name="accesskey" placeholder="Enter Access Key ..." required>
-                    <input class="form-control d-block my-3" type="password" name="secretkey" placeholder="Enter Secret Key ..." required>
-				<select class="form-control" name="type">
-					<option selected>Choose Level ...</option>
-					<option>Service Level</option>
-					<option>Bucket Level</option>
-				</select>
-                    <input class="form-control d-block my-3" name="name" placeholder="Type Name...">
-
+                  <input class="form-control" name="accesskey" placeholder="Enter Access Key ..." required>
+                  <input class="form-control d-block my-3" type="password" name="secretkey" placeholder="Enter Secret Key ..." required>
+          				<select class="form-control" name="type" required>
+          					<option selected value="">Choose Level ...</option>
+          					<option>Service Level</option>
+          					<option>Bucket Level</option>
+          				</select>
+                  <input class="form-control d-block my-3" name="name" placeholder="Type Name..." required>
                   <label for="start" class="d-block my-3">Start Time</label>
-                  <input type="date" class="form-control d-block my-3" id="opt-date-start" name="dateStart">
-                  <input type="time" class="form-control" id="opt-start" name="timeStart" placeholder="Start Time">
-
+                  <input type="date" class="form-control d-block my-3" id="opt-date-start" name="dateStart" required="">
+                  <input type="time" class="form-control" id="opt-start" name="timeStart" placeholder="Start Time" required="">
                   <label class="d-block my-3">End Time</label>
-                  <input type="date" class="form-control d-block my-3" id="opt-date-end" name="dateEnd">
-                  <input type="time" class="form-control" id="opt-end" name="timeEnd" placeholder="End Time">
-
-                   <label></label>
-
-                  <select class="form-control d-block my-3" name="timeStamp">
-                    <option selected>Time Interval...</option>
+                  <input type="date" class="form-control d-block my-3" id="opt-date-end" name="dateEnd" required>
+                  <input type="time" class="form-control" id="opt-end" name="timeEnd" placeholder="End Time" required>
+                  <label></label>
+                  <select class="form-control d-block my-3" name="timeStamp" required>
+                    <option selected value="">Time Interval...</option>
                     <option>15 min</option>
                     <option>30 min</option>
                     <option>01 hr</option>
@@ -124,7 +120,7 @@
         </span>
       </div>
       <div class="container github-icon">
-        <a href="https://github.com/JibranKalia/zenkoders" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+        <a href="https://github.com/JibranKalia/zenkoders" target="_blank"><i class="fa fa-github fa-5x" aria-hidden="true"></i></a>
       </div>
     </div>
 
