--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <!-- Full Page JS -->
     <script type="text/javascript" src="js/jquery.fullPage.min.js"></script>
 
+    <!-- Remove these later -->
     <script src="http://d3js.org/d3.v3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 
